docs/sphinx/_downloads/f8bc3b359649e1511b70552f7d3ecf4f/codata.h

typedef struct codata_constant_type{
    char name[65];
    double value;
    double uncertainty;
    char unit[33];
}cct;
ADD_IMPORT extern const cct DEUTERON_MASS_IN_U_2018;
ADD_IMPORT extern const cct DEUTERON_MOLAR_MASS_2018;
ADD_IMPORT extern const cct DEUTERON_NEUTRON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_PROTON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_PROTON_MASS_RATIO_2018;
ADD_IMPORT extern const cct DEUTERON_RELATIVE_ATOMIC_MASS_2018;
ADD_IMPORT extern const cct DEUTERON_RMS_CHARGE_RADIUS_2018;
ADD_IMPORT extern const cct ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018;
ADD_IMPORT extern const cct ELECTRON_DEUTERON_MAG_MOM_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_DEUTERON_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_G_FACTOR_2018;
ADD_IMPORT extern const cct ELECTRON_GYROMAG_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_GYROMAG_RATIO_IN_MHZ_T_2018;
ADD_IMPORT extern const cct ELECTRON_HELION_MASS_RATIO_2018;
ADD_IMPORT extern const cct ELECTRON_MAG_MOM_2018;