src/codata_constants_2018_capi.f90


type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MASS_IN_U_2018") ::&
capi_76_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"a", "s", "s", " ", "i", "n", " ", "u", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MASS_IN_U_2018%value, &
DEUTERON_MASS_IN_U_2018%uncertainty, &
[ &
"u", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_MOLAR_MASS_2018") ::&
capi_77_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "m", &
"o", "l", "a", "r", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_MOLAR_MASS_2018%value, &
DEUTERON_MOLAR_MASS_2018%uncertainty, &
[ &
"k", "g", " ", "m", "o", "l", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_NEUTRON_MAG_MOM_RATIO_2018") ::&
capi_78_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "n", &
"e", "u", "t", "r", "o", "n", " ", "m", "a", "g", &
".", " ", "m", "o", "m", ".", " ", "r", "a", "t", &
"i", "o", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_NEUTRON_MAG_MOM_RATIO_2018%value, &
DEUTERON_NEUTRON_MAG_MOM_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MAG_MOM_RATIO_2018") ::&
capi_79_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "g", ".", &
" ", "m", "o", "m", ".", " ", "r", "a", "t", "i", &
"o", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MAG_MOM_RATIO_2018%value, &
DEUTERON_PROTON_MAG_MOM_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_PROTON_MASS_RATIO_2018") ::&
capi_80_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", "-", "p", &
"r", "o", "t", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_PROTON_MASS_RATIO_2018%value, &
DEUTERON_PROTON_MASS_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_RELATIVE_ATOMIC_MASS_2018") ::&
capi_81_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "r", &
"e", "l", "a", "t", "i", "v", "e", " ", "a", "t", &
"o", "m", "i", "c", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_RELATIVE_ATOMIC_MASS_2018%value, &
DEUTERON_RELATIVE_ATOMIC_MASS_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="DEUTERON_RMS_CHARGE_RADIUS_2018") ::&
capi_82_2018 = capi_constant_type([ &
"d", "e", "u", "t", "e", "r", "o", "n", " ", "r", &
"m", "s", " ", "c", "h", "a", "r", "g", "e", " ", &
"r", "a", "d", "i", "u", "s", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
DEUTERON_RMS_CHARGE_RADIUS_2018%value, &
DEUTERON_RMS_CHARGE_RADIUS_2018%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018") ::&
capi_83_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "c", &
"h", "a", "r", "g", "e", " ", "t", "o", " ", "m", &
"a", "s", "s", " ", "q", "u", "o", "t", "i", "e", &
"n", "t", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018%value, &
ELECTRON_CHARGE_TO_MASS_QUOTIENT_2018%uncertainty, &
[ &
"C", " ", "k", "g", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MAG_MOM_RATIO_2018") ::&
capi_84_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"g", ".", " ", "m", "o", "m", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MAG_MOM_RATIO_2018%value, &
ELECTRON_DEUTERON_MAG_MOM_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_DEUTERON_MASS_RATIO_2018") ::&
capi_85_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "d", &
"e", "u", "t", "e", "r", "o", "n", " ", "m", "a", &
"s", "s", " ", "r", "a", "t", "i", "o", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_DEUTERON_MASS_RATIO_2018%value, &
ELECTRON_DEUTERON_MASS_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_G_FACTOR_2018") ::&
capi_86_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
" ", "f", "a", "c", "t", "o", "r", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_G_FACTOR_2018%value, &
ELECTRON_G_FACTOR_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO_2018") ::&
capi_87_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO_2018%value, &
ELECTRON_GYROMAG_RATIO_2018%uncertainty, &
[ &
"s", "^", "-", "1", " ", "T", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_GYROMAG_RATIO_IN_MHZ_T_2018") ::&
capi_88_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "g", &
"y", "r", "o", "m", "a", "g", ".", " ", "r", "a", &
"t", "i", "o", " ", "i", "n", " ", "M", "H", "z", &
"/", "T", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_GYROMAG_RATIO_IN_MHZ_T_2018%value, &
ELECTRON_GYROMAG_RATIO_IN_MHZ_T_2018%uncertainty, &
[ &
"M", "H", "z", " ", "T", "^", "-", "1", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_HELION_MASS_RATIO_2018") ::&
capi_89_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", "-", "h", &
"e", "l", "i", "o", "n", " ", "m", "a", "s", "s", &
" ", "r", "a", "t", "i", "o", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_HELION_MASS_RATIO_2018%value, &
ELECTRON_HELION_MASS_RATIO_2018%uncertainty, &
[ &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ELECTRON_MAG_MOM_2018") ::&
capi_90_2018 = capi_constant_type([ &
"e", "l", "e", "c", "t", "r", "o", "n", " ", "m", &
"a", "g", ".", " ", "m", "o", "m", ".", c_null_char, " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ELECTRON_MAG_MOM_2018%value, &
ELECTRON_MAG_MOM_2018%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
